--- a/ld-generation/mapping.yml
+++ b/ld-generation/mapping.yml
@@ -7,7 +7,7 @@ prefixes:
   foaf: "http://xmlns.com/foaf/0.1/"
   sh: "http://www.w3.org/ns/shacl#"
   ex: "https://example.org/ns/example#"
-  schema: "https://schema.org/"
+  schema: "http://schema.org/"
   skos: "http://www.w3.org/2004/02/skos/core#"
   xl: "http://www.w3.org/2008/05/skos-xl#"
   ops: "https://data.vlaanderen.be/shacl/persoon-basis#"
