updated latest developments

--- a/src/package.json
+++ b/src/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@util.js/node-streams": "^0.41.0",
     "child-process-promise": "^2.2.1",
     "glob": "^7.1.6",
+    "graphy": "^4.3.3",
     "rdflib": "^2.1.7"
   }
 }
